app-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: app1
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: app1
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    type: web
  name: app1
spec:
  replicas: 3
  selector:
    matchLabels:
      type: web
  strategy: {}
  template:
    metadata:
      labels:
        type: web
    spec:
      containers:
      - env:
        image: nginx:latest
        imagePullPolicy: Always
        name: ingress-nginx
        ports:
          - containerPort: 80
        resources: {}
      restartPolicy: Always
      volumes: null
status: {}
